--- a/index.html
+++ b/index.html
@@ -1,56 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Atmos — Reading the Atmosphere</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8">
+<title>atmos</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<div id="loading" class="hidden">
+  <canvas id="loadingWave"></canvas>
+  <p>sampling the atmosphere...</p>
+</div>
+
 <header>
-  <h1>Atmos</h1>
-  <p class="tagline">Reading the atmosphere, layer by layer.</p>
+  <h1>atmos</h1>
+  <p class="tagline">reading the atmosphere, layer by layer</p>
 </header>
 
 <section class="input-panel">
-  <button id="geoBtn">Use My Location</button>
+  <button id="geoBtn">use my location</button>
 
   <div class="manual">
-    <input type="text" id="city" placeholder="City" />
-    <input type="text" id="country" placeholder="Country (optional)" />
-    <button id="manualBtn">Analyze</button>
+    <input id="city" placeholder="city">
+    <button id="manualBtn">analyze</button>
   </div>
 
-  <p class="privacy">Location is used once and never stored.</p>
+  <p class="privacy">location is never stored</p>
 </section>
 
 <main id="layers" class="hidden">
 
-  <div class="layer">
-    <button class="layer-header">Surface Conditions</button>
-    <div class="layer-content" id="surface"></div>
+  <div class="layer open">
+    <button class="layer-header">surface temperature</button>
+    <div class="layer-content">
+      <canvas id="tempWave"></canvas>
+      <p class="analysis">
+        temperature encoded as wave amplitude over a daily cycle.
+      </p>
+    </div>
   </div>
 
   <div class="layer">
-    <button class="layer-header">Pressure & Systems</button>
-    <div class="layer-content" id="pressure"></div>
+    <button class="layer-header">pressure systems</button>
+    <div class="layer-content">
+      <canvas id="pressureWave"></canvas>
+      <p class="analysis">
+        pressure stability shown through interference patterns.
+      </p>
+    </div>
   </div>
 
   <div class="layer">
-    <button class="layer-header">Wind & Motion</button>
-    <div class="layer-content" id="wind"></div>
-  </div>
-
-  <div class="layer">
-    <button class="layer-header">Context & Interpretation</button>
-    <div class="layer-content" id="context"></div>
+    <button class="layer-header">wind motion</button>
+    <div class="layer-content">
+      <canvas id="windWave"></canvas>
+      <p class="analysis">
+        wind speed visualized as oscillation intensity and drift.
+      </p>
+    </div>
   </div>
 
 </main>
 
 <footer>
-  <p>built for hack club · api-powered</p>
+  <p>hack club sleepover · api powered · privacy first</p>
 </footer>
 
 <script src="script.js"></script>
