--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="layer-content">
         <canvas id="windWave"></canvas>
         <p class="analysis">
-          wind emerges from <span class="tooltip" data-tip="the change in pressure over a distance"></span>pressure gradients, shaped by 
+          wind emerges from <span class="tooltip" data-tip="the change in pressure over a distance">pressure gradients</span>, shaped by 
           <span class="tooltip" data-tip="deflection of moving air due to earth’s rotation">coriolis deflection</span> 
           and friction with the surface.
         </p>
