--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div class="page">
 
-  <button id="themeToggle" aria-label="toggle dark mode">🌙</button>
+  <button id="themeToggle" aria-label="toggle dark mode">dark</button>
 
   <div id="loading" class="hidden">
     <canvas id="loadingWave"></canvas>
